--- a/css/home.css
+++ b/css/home.css
@@ -12,8 +12,7 @@
 .card-body{
     border: #00000017 solid 1px;
     border-radius: 4px;
-    margin: 0 5px;
     padding: 13px;
-    background: #fff;
+    background: #f7f7f7;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.04);
 }
