--- a/app-options-page/components/export-detail/export.html
+++ b/app-options-page/components/export-detail/export.html
@@ -1,4 +1,4 @@
-<img ng-show="loading" id="ordersLoading" src="../../../images/loader.gif" />
+
 <div class="noprint">
     <div class="col-md-9">
         <div>
@@ -8,8 +8,11 @@
     </div>
     <div class="col-md-3">
         <ul class="list-group" style="font-size: 20px;">
+            <li class="list-group-item">
+                <span id="size">{{id}}</span>
+            </li>
             <li class="list-group-item">Số Lượng:
-                <span id="size" >{{size}}</span> đơn</li>
+                <span id="size">{{size}}</span> đơn</li>
             <li class="list-group-item">Người nhận:
                 <input type="text" name="" id="shipperName" value="{{shipperName}}">
             </li>
@@ -17,13 +20,18 @@
                 <span id="date">{{date}}</span>
             </li>
         </ul>
-        <label id="status">{{status}}</label>
-        <select ng-show="cancel" class="form-control" name="" id="selectStatus">
-            <option></option>
-            <option>MỚI</option>
-            <option>ĐÃ GIAO</option>
-            <option value="CANCEL">HỦY PHIẾU</option>
-        </select>
+        <span ng-show="!cancel">{{status}}</span>
+        <div ng-show="cancel">
+
+            <input type="radio" style="margin: 4px 5px 22px 15px;" ng-model="status" value="MỚI"> MỚI
+
+
+            <input type="radio" style="margin: 4px 5px 22px 15px;" ng-model="status" value="ĐÃ GIAO"> ĐÃ GIAO
+
+
+            <input type="radio" style="margin: 4px 5px 22px 15px;" ng-model="status" value="CANCEL"> HỦY PHIẾU
+
+        </div>
     </div>
 </div>
 <div class="print">
@@ -37,15 +45,16 @@
             <tr id="haveQR">
                 <td>Người giao:</td>
                 <td>
-                    SỐ LƯỢNG: <b>{{size}}</b> ĐƠN
+                    SỐ LƯỢNG:
+                    <b>{{size}}</b> ĐƠN
                     <p>Người nhận:</p>
-                </td>                
+                </td>
             </tr>
         </tbody>
     </table>
-    <ul class="list-group" style="columns: 2; border-bottom: none">
-        <li ng-repeat="x in arrTraceno" class="list-group-item">
-            <b>{{x}}</b>
-        </li>
-    </ul>
+    <p>
+        <span style="line-height: 40px;font-size: 20px;margin-right: 12px;" ng-repeat="x in arrTraceno | orderBy">
+            <b>{{x}}, </b>
+        </span>
+    </p>
 </div>
