--- a/app-options-page/components/export-detail/export.html
+++ b/app-options-page/components/export-detail/export.html
@@ -11,8 +11,8 @@
             <li class="list-group-item">
                 <span id="size">{{id}}</span>
             </li>
-            <li class="list-group-item">Số Lượng:
-                <span id="size">{{size}}</span> đơn</li>
+            <li class="list-group-item">Số lượng đơn đã gửi:
+                {{arrShipped.length}}/<span id="size">{{size}}</span></li>
             <li class="list-group-item">Người nhận:
                 <input type="text" name="" id="shipperName" value="{{shipperName}}">
             </li>
