--- a/app-options-page/components/scanOrder/scanView.html
+++ b/app-options-page/components/scanOrder/scanView.html
@@ -14,6 +14,9 @@
                 <div class="radio">
                         <input type="radio" ng-model="typeUrl" value="exportCode"> Xem Phiếu Xuất
                 </div>
+                <button title="Dùng trong trường hợp bạn không thể tìm thấy trong bảng ĐƠN HÀNG" class="btn btn-primary" ng-click="search()">
+                        <span class="glyphicon glyphicon-search"></span>
+                </button>
         </div>
         <!-- <div id="reader" autoplay="" style="width:700px;height:540px; display: block; margin-left: auto; margin-right:auto"></div> -->
 </div>
