--- a/app-options-page/components/configuration/configurationView.html
+++ b/app-options-page/components/configuration/configurationView.html
@@ -64,6 +64,9 @@
                                 </a>
                         </div>
                 </div>
+                <form id="imgur">
+                                <input type="file" class="imgur" accept="image/*"/>
+                              </form>
         </div>
 </div>
 
