--- a/app-options-page/components/print-ordershopee/printView.html
+++ b/app-options-page/components/print-ordershopee/printView.html
@@ -47,6 +47,9 @@
                             </span>
                         </td>
                     </tr>
+                    <tr ng-show="showEx" ><td>
+                        Mã Phiếu Xuất: <a target="_blank" href="/options.html#/export/{{exportId}}">{{exportId}}</a>
+                    </td></tr>
                     <tr ng-show="note !== ''">
                         <!-- <tr> -->
                         <td>
@@ -79,7 +82,6 @@
                 <!-- 
                             <input type="radio" ng-model="statusRadio" value="PAID">ĐÃ THANH TOÁN
                     </div> -->
-                </select>
             </div>
             <!-- <div class="row"> -->
             <div>
