--- a/app-options-page/components/scanOrder/scanView.html
+++ b/app-options-page/components/scanOrder/scanView.html
@@ -4,19 +4,27 @@
                 <video id="preview"></video>
         </div>
         <div class="col-md-5">
-                <div class="radio">
-                        <input type="radio" ng-model="typeUrl" value="addon"> Xem Đơn Addon
+                <div>
+                        <div class="radio">
+                                <input type="radio" ng-model="typeUrl" value="addon"> Xem Đơn Addon
+                        </div>
+                        <div class="radio">
+                                <input type="radio" ng-model="typeUrl" value="shopee"> Xem Đơn Shopee
+                        </div>
+                        <div class="radio">
+                                <input type="radio" ng-model="typeUrl" value="exportCode"> Xem Phiếu Xuất
+                        </div>
+                </div>
 
-                </div>
-                <div class="radio">
-                        <input type="radio" ng-model="typeUrl" value="shopee"> Xem Đơn Shopee
-                </div>
-                <div class="radio">
-                        <input type="radio" ng-model="typeUrl" value="exportCode"> Xem Phiếu Xuất
-                </div>
-                <button title="Dùng trong trường hợp bạn không thể tìm thấy trong bảng ĐƠN HÀNG" class="btn btn-primary" ng-click="search()">
-                        <span class="glyphicon glyphicon-search"></span>
-                </button>
+                <form class="form-inline">
+                        <div class="form-group">
+                                <input type="text" ng-model="searchInput" name="" id="search" class="form-control" placeholder="NHẬP MÃ VẬN ĐƠN">
+                                <button ng-disabled="disableBut" title="Dùng trong trường hợp bạn không thể tìm thấy trong bảng ĐƠN HÀNG" class="btn btn-primary" ng-click="search()">
+                                        <span class="glyphicon glyphicon-search"></span>
+                                </button>
+                        </div>
+                </form>
+
         </div>
         <!-- <div id="reader" autoplay="" style="width:700px;height:540px; display: block; margin-left: auto; margin-right:auto"></div> -->
 </div>
