--- a/app-options-page/components/export-detail/export.html
+++ b/app-options-page/components/export-detail/export.html
@@ -48,15 +48,15 @@
             <tr id="haveQR">                
                 <td>Người giao:</td>
                 <td>
-                    SỐ LƯỢNG:
-                    <b>{{size}}</b> ĐƠN
+                    SỐ LƯỢNG ĐƠN:
+                    <b style="font-size: 25px">{{size}}</b>
                     <p>Người nhận:</p>
                 </td>
             </tr>
         </tbody>
     </table>
     <p>
-        <span style="line-height: 40px;font-size: 20px;margin-right: 12px;" ng-repeat="x in arrTraceno | orderBy">
+        <span style="line-height: 40px;font-size: 12px;margin-right: 12px;" ng-repeat="x in arrTraceno | orderBy">
             {{x}}, 
         </span>
     </p>
