--- a/app-options-page/components/orders/ordersView.html
+++ b/app-options-page/components/orders/ordersView.html
@@ -55,17 +55,17 @@
         </div>
     </div>
 </div>
-<div class="print">
-    <ul ng-repeat="x in rowSelected" class="list-group">
-        <div class="col-sm-6" style="display: inline-block;">
+<div class="print rowPrint">
+    <ul ng-repeat="x in rowSelected" class="list-group" style="float: left;width: 50%; margin-bottom: 5px">
+        <div style="display: inline-block; margin-right: 10px">
             <div id="{{x.id}}"></div>
         </div>
-        <div class="col-sm-6" style="display: inline-block">
+        <div style="display: inline-block">
             <!-- <li class="list-group-item">
                 ID: {{x.id}} - {{x.own_Status}}
             </li> -->
 
-            <b style="font-size: 23px">{{x.trackno}}</b>
+            <span style="font-size:22px">{{x.trackno}}</span>
             <br>
             <li style="padding-bottom: 8px; list-style-type : none">
                 {{x.nickname}}
@@ -95,7 +95,7 @@
         <tr ng-repeat="item in products">
             <td style="background: #fff;">
                 <img class="imgPro" src="{{item.imageUrl}}" width="80px" height="80px" alt=""> </td>
-            <td>{{ item.name }}</td>
+            <td>{{ item.name }} <br><b  ng-show="item.orders.length > 0">[ <span style="color:rgb(255, 87, 34)" ng-repeat="order in item.orders">{{order}}<span ng-show="item.orders.length >1 " style="color:#000">, </span></span> ]</b> </td>
             <td>{{ item.model }}</td>
             <td>{{ item.amount }}</td>
         </tr>
@@ -105,7 +105,6 @@
 <table class="table table-bordered print">
     <tbody>
         <tr ng-repeat="item in products">
-
             <td>{{ item.name }}</td>
             <td>{{ item.model }}</td>
             <td>{{ item.amount }}</td>
