--- a/app-options-page/components/orders/ordersView.html
+++ b/app-options-page/components/orders/ordersView.html
@@ -7,7 +7,7 @@
         </button>
         <form id="imgur">
             <div id="dropContainer" >
-                <img src="../../../images/upload.png" id="upfile" style="cursor:pointer" />
+                <img src="../../../images/upload.png" id="upfile" style="    width: 35px;cursor:pointer" />
                 <input type="file" style="display:none" id="fileInput" class="imgur noprint" accept="image/*" />
             </div>
         </form>
