--- a/app-options-page/components/home/homeView.html
+++ b/app-options-page/components/home/homeView.html
@@ -12,12 +12,12 @@
                         {{sumToday.toLocaleString()}} ₫
                     </span>
                 </h4>
-                
+
             </div>
         </div>
         <div class="card-report">
             <div class="card-body">
-                    <p class="card-text">Ngày hôm qua</p>
+                <p class="card-text">Ngày hôm qua</p>
                 <h4 class="card-title">
                     <span ng-show="yesterday >= 0">
                         <a>{{yesterday}}</a> Đơn Hàng</span>
@@ -27,12 +27,12 @@
                         {{sumYes.toLocaleString()}} ₫</span>
                 </h4>
 
-                
+
             </div>
         </div>
         <div class="card-report">
             <div class="card-body">
-                    <p class="card-text">7 ngày qua</p>
+                <p class="card-text">7 ngày qua</p>
                 <h4 class="card-title">
                     <span ng-show="seven >= 0">
                         <a>{{seven}}</a> Đơn Hàng</span>
@@ -41,12 +41,12 @@
                     <span ng-show="sumSeven >= 0">
                         {{sumSeven.toLocaleString()}} ₫</span>
                 </h4>
-                
+
             </div>
         </div>
         <div class="card-report">
             <div class="card-body">
-                    <p class="card-text">Tháng này</p>
+                <p class="card-text">Tháng này</p>
                 <h4 class="card-title">
                     <span ng-show="month >= 0">
                         <a>{{month}}</a> Đơn Hàng</span>
@@ -55,7 +55,7 @@
                     <span ng-show="sumMonth >= 0">
                         {{sumMonth.toLocaleString()}} ₫</span>
                 </h4>
-                
+
             </div>
         </div>
     </div>
@@ -81,4 +81,74 @@
         </div> -->
     </div>
     <!-- </div> -->
+</div>
+<div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog">
+        <!-- Modal content-->
+        <!-- <div class="modal-content">         -->
+        <!-- <div class="modal-body"> -->
+        <form id="regForm" action="">
+            <!-- One "tab" for each step in the form: -->
+            <div class="tab">
+                <p>
+                    <input id="productName" placeholder="Tên Sản Phẩm..." oninput="this.className = ''">
+                </p>
+                <p id="previewImage">
+                    <img ng-click="addPreviewImage()" style="cursor: pointer;margin: 4px;" width="121" height="121" src="https://i.imgur.com/7DiFQlI.png"
+                        title="THÊM HÌNH ẢNH">
+                </p>
+            </div>
+
+            <div class="tab">
+                <p id="addSku">
+                    <input id="skuName" placeholder="Thêm Phân Loại..." style="display: -webkit-inline-box; width: 78%;" oninput="this.className = ''">
+                    <button style="background-image: url('')" ng-click="addSkuPreview()" class="skuPreviewUrl" id="Sku">
+                        <span class="glyphicon glyphicon-picture" style="color: #000"></span>
+                    </button>
+                    <button ng-click="addSku()" id="Sku">
+                        <span class="glyphicon glyphicon-plus" style="color: #288a43"></span>
+                    </button>
+                    <!-- <button id="Sku">
+                        <span class="glyphicon glyphicon-remove" style="color: #e51e1e;"></span>
+                    </button> -->
+                </p>
+                <p id="skuList">
+                    <ul class="list-sku">
+                        
+                        <!-- <li class="list-group-item" >
+                                <button id="Sku">
+                                    <span class="glyphicon glyphicon-picture" style="color: #000"></span>
+                                </button>
+                                <span style="width: 77%;margin-right: 6px;background: #ddd;display: inline-block;padding: 12px;font-size: 17px;">Hồng Phấn</span>
+                                <button id="Sku" style="margin-right:0px">
+                                    <span class="glyphicon glyphicon-remove" style="color: #e51e1e; "></span>
+                                </button>
+                            </li> -->
+                    </ul>
+                </p>
+            </div>
+
+
+            <div style="overflow:auto;">
+                <div style="float:right;">
+                    <button type="button" id="prevBtn" style="background: #f33737;color: #fff;" ng-click="nextPrev(-1)">
+                        <span class="glyphicon glyphicon-chevron-left"></span>
+                    </button>
+                    <button type="button" id="nextBtn" style="background: #2fb61f;color: #fff;" ng-click="nextPrev(1)">
+                        <span class="glyphicon glyphicon-chevron-right"></span>
+                    </button>
+                </div>
+            </div>
+
+            <!-- Circles which indicates the steps of the form: -->
+            <div style="text-align:center;margin-top:40px;">
+                <span class="step"></span>
+                <span class="step"></span>
+            </div>
+
+        </form>
+        <!-- </div> -->
+
+        <!-- </div> -->
+    </div>
 </div>
