--- a/css/custom.css
+++ b/css/custom.css
@@ -339,3 +339,91 @@ table:hover {
   float: left;
   margin: 5px 5px 5px 30px;
 }
+
+
+
+
+#regForm {
+  background-color: #ffffff;
+  margin: 100px auto;
+  padding: 40px;
+  min-width: 300px;  
+  border-radius: 4px;
+}
+
+#regForm button {
+  border: none;
+  /* border-radius: 25px; */
+  padding: 5px 9px;
+  margin-right: 5px;
+}
+button#Sku {
+  padding: 12px 15px;
+  font-size: 17px;
+}
+.list-sku, .list-sku .list-group-item{
+  padding-left: 0px;
+  padding-right: 0px
+}
+.list-sku li.list-group-item {
+  padding-bottom: 0px;
+}
+
+.list-sku{
+  margin-bottom: 20px
+}
+
+#imageUrl{
+    display: block;
+    width: 100%;
+    padding-left: 5px;
+    border: 1px solid #3333333d;
+    border-radius: 4px;
+}
+img.imgPreview {
+  border: 1px solid #d4d4d4;
+  margin: 4px;
+}
+
+/* Style the input fields */
+.tab input {
+  padding: 10px;
+  width: 98%;
+  font-size: 17px;
+  border: 2px solid rgba(74, 174, 7, 0.2);
+  border-radius: 2px;
+  margin: 0 auto;
+  display: block;
+}
+
+/* Mark input boxes that gets an error on validation: */
+.tab input.invalid {
+  background-color: #ffdddd;
+}
+
+/* Hide all steps by default: */
+.tab {
+  display: none;
+}
+
+/* Make circles that indicate the steps of the form: */
+.step {
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbbbbb;
+  border: none; 
+  border-radius: 50%;
+  display: inline-block;
+  opacity: 0.5;
+}
+
+/* Mark the active step: */
+.step.active {
+  opacity: 1;
+}
+
+/* Mark the steps that are finished and valid: */
+.step.finish {
+  background-color: #4CAF50;
+}
