--- a/app-options-page/components/products/productsView.html
+++ b/app-options-page/components/products/productsView.html
@@ -19,10 +19,10 @@
                 <div class="tab">
                     <p id="addSku">
                         <input id="skuName" placeholder="Thêm Phân Loại..." style="display: -webkit-inline-box; width: 78%;" oninput="this.className = ''">
-                        <button style="background-image: url('')" ng-click="addSkuPreview()" class="skuPreviewUrl" id="Sku">
+                        <button  type="button" style="background-image: url('')" ng-click="addSkuPreview()" class="skuPreviewUrl" id="Sku">
                             <span class="glyphicon glyphicon-picture" style="color: #000"></span>
                         </button>
-                        <button ng-click="addSku()" id="Sku">
+                        <button type="button" ng-click="addSku()" id="Sku">
                             <span class="glyphicon glyphicon-plus" style="color: #288a43"></span>
                         </button>
                         <!-- <button id="Sku">
