--- a/app-options-page/components/productsList/productsList.html
+++ b/app-options-page/components/productsList/productsList.html
@@ -11,18 +11,19 @@
                 <h4 class="modal-title">{{titleProductName}}</h4>
             </div>
             <div class="modal-body">
-                    <li class="addClassify">
-                            <input type="text" id="addClassifyName" placeholder="Thêm tên phân loại">
-                            <button style="padding: 1px 1px 0px 0;border-bottom: 1px #ddd solid;" ng-click="addSkuPreview()" class="skuPreviewUrl">
-                                    <img class="previewSkuImg" height="38" width="38" src="https://i.imgur.com/NWUJZb1.png">
-                            </button>
-                            <button ng-click="addSku()">
-                                    <span class="glyphicon glyphicon-plus"></span>
-                            </button>
-                        </li>
+                <li class="addClassify">
+                    <input type="text" id="addClassifyName" placeholder="Thêm tên phân loại">
+                    <button style="padding: 1px 1px 0px 0;border-bottom: 1px #ddd solid;" ng-click="addSkuPreview()" class="skuPreviewUrl">
+                        <img class="previewSkuImg" height="38" width="38" src="https://i.imgur.com/NWUJZb1.png">
+                    </button>
+                    <button ng-click="addSku()">
+                        <span class="glyphicon glyphicon-plus"></span>
+                    </button>
+
+                </li>
                 <ul id="listClassify">
-                    
-                    <li id="{{i.original_sku}}" class="classifyItem" ng-repeat="i in listClassify">
+
+                    <li class="classifyItem" ng-repeat="i in listClassify" id="{{i.original_sku}}">
                         <img class="previewSkuImg" style="border: #ccc solid 1px;" height="50" width="50" src="{{i.image? i.image: 'https://i.imgur.com/NWUJZb1.png'}}"
                             alt="">
                         <input type="text" id="classifyName" title="{{i.name}}" value="{{i.name}}">
@@ -39,39 +40,39 @@
     </div>
 </div>
 <div class="modal fade" id="myModal" role="dialog">
-        <div class="modal-dialog">
-            <!-- Modal content-->
-            <!-- <div class="modal-content">         -->
-            <!-- <div class="modal-body"> -->
-            <form id="regForm" action="">
-                <!-- One "tab" for each step in the form: -->
-                <div class="tab">
-                    <p>
-                        <input id="productName" placeholder="Tên Sản Phẩm..." oninput="this.className = ''">
-                    </p>
-                    <p id="previewImage">
-                        <img ng-click="addPreviewImage()" style="cursor: pointer;margin: 4px;" width="121" height="121" src="https://i.imgur.com/7DiFQlI.png"
-                            title="THÊM HÌNH ẢNH">
-                    </p>
-                </div>
-    
-                <div class="tab">
-                    <p id="addSku">
-                        <input id="skuName" placeholder="Thêm Phân Loại..." style="display: -webkit-inline-box; width: 78%;" oninput="this.className = ''">
-                        <button  type="button" style="background-image: url('')" ng-click="addSkuPreview()" class="skuPreviewUrl" id="Sku">
-                            <span class="glyphicon glyphicon-picture" style="color: #000"></span>
-                        </button>
-                        <button type="button" ng-click="addSku()" id="Sku">
-                            <span class="glyphicon glyphicon-plus" style="color: #288a43"></span>
-                        </button>
-                        <!-- <button id="Sku">
+    <div class="modal-dialog">
+        <!-- Modal content-->
+        <!-- <div class="modal-content">         -->
+        <!-- <div class="modal-body"> -->
+        <div id="regForm">
+            <!-- One "tab" for each step in the form: -->
+            <div class="tab">
+                <p>
+                    <input id="productName" placeholder="Tên Sản Phẩm..." oninput="this.className = ''">
+                </p>
+                <p id="previewImage">
+                    <img ng-click="addPreviewImage()" style="cursor: pointer;margin: 4px;" width="121" height="121" src="https://i.imgur.com/7DiFQlI.png"
+                        title="THÊM HÌNH ẢNH">
+                </p>
+            </div>
+
+            <div class="tab">
+                <p id="addSku">
+                    <input id="skuName" placeholder="Thêm Phân Loại..." style="display: -webkit-inline-box; width: 78%;" oninput="this.className = ''">
+                    <button type="button" style="background-image: url('')" ng-click="addSkuPreview()" class="skuPreviewUrl" id="Sku">
+                        <span class="glyphicon glyphicon-picture" style="color: #000"></span>
+                    </button>
+                    <button type="button" ng-click="addSku()" id="Sku">
+                        <span class="glyphicon glyphicon-plus" style="color: #288a43"></span>
+                    </button>
+                    <!-- <button id="Sku">
                             <span class="glyphicon glyphicon-remove" style="color: #e51e1e;"></span>
                         </button> -->
-                    </p>
-                    <p id="skuList">
-                        <ul class="list-sku">
-                            
-                            <!-- <li class="list-group-item" >
+                </p>
+                <p id="skuList">
+                    <ul class="list-sku">
+
+                        <!-- <li class="list-group-item" >
                                     <button id="Sku">
                                         <span class="glyphicon glyphicon-picture" style="color: #000"></span>
                                     </button>
@@ -80,31 +81,86 @@
                                         <span class="glyphicon glyphicon-remove" style="color: #e51e1e; "></span>
                                     </button>
                                 </li> -->
-                        </ul>
-                    </p>
+                    </ul>
+                </p>
+            </div>
+
+
+            <div style="overflow:auto;">
+                <div style="float:right;">
+                    <button type="button" id="prevBtn" style="background: #f33737;color: #fff;" ng-click="nextPrev(-1)">
+                        <span class="glyphicon glyphicon-chevron-left"></span>
+                    </button>
+                    <button type="button" id="nextBtn" style="background: #2fb61f;color: #fff;" ng-click="nextPrev(1)">
+                        <span class="glyphicon glyphicon-chevron-right"></span>
+                    </button>
                 </div>
-    
-    
-                <div style="overflow:auto;">
-                    <div style="float:right;">
-                        <button type="button" id="prevBtn" style="background: #f33737;color: #fff;" ng-click="nextPrev(-1)">
-                            <span class="glyphicon glyphicon-chevron-left"></span>
-                        </button>
-                        <button type="button" id="nextBtn" style="background: #2fb61f;color: #fff;" ng-click="nextPrev(1)">
-                            <span class="glyphicon glyphicon-chevron-right"></span>
-                        </button>
+            </div>
+
+            <!-- Circles which indicates the steps of the form: -->
+            <div style="text-align:center;margin-top:40px;">
+                <span class="step"></span>
+                <span class="step"></span>
+            </div>
+
+        </div>
+        <!-- </div> -->
+
+        <!-- </div> -->
+    </div>
+</div>
+<div class="modal fade" id="addDistributor" role="dialog">
+    <div class="modal-dialog" style="width:fit-content">
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">{{titleProductName}}</h4>
+            </div>
+            <div class="modal-body">
+                <div class="row" style="margin: 20px 5px">                   
+                    <div class="addDIS">
+                        <input placeholder="Nhập tên nhà phân phối..." id="Disname" type="text">
+                        <p>
+                            <input placeholder="Nhập ID nhà phân phối..." id="Disid" type="number">
+                        </p>
+                        <input type="checkbox" ng-click="toggle($event)" id="checkall"/><span> Chọn hết</span> <br/>
+                        <div class="checkboxClassify" ng-repeat="i in classifyToDis">                            
+                            <input type="checkbox" name="classify" value="{{i.name}}">
+                            <span>{{i.name}}</span>
+                        </div>
                     </div>
                 </div>
-    
-                <!-- Circles which indicates the steps of the form: -->
-                <div style="text-align:center;margin-top:40px;">
-                    <span class="step"></span>
-                    <span class="step"></span>
+            </div>
+            <div class="modal-footer">
+                <button type="button" ng-click="addDis()" class="btn btn-success" style="float: right;">ADD</button>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="modal fade" id="showDistributor" role="dialog">
+        <div class="modal-dialog" style="width:fit-content">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">{{titleProductName}}</h4>
                 </div>
-    
-            </form>
-            <!-- </div> -->
-    
-            <!-- </div> -->
+                <div class="modal-body">
+                    <div class="row" style="margin: 20px 5px">                   
+                        <ul class="listDis">
+                            <li ng-repeat="i in linkedToShow" id="{{i.id}}" class="disItem">
+                                <span class="disName"><input disabled type="text" name="disName" id="" value="{{i.name}}"></span>                                
+                                <button ng-click="removeDis($event)" class="removeDis">
+                                        <span class="glyphicon glyphicon-remove"></span>
+                                </button>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" ng-click="saveDis()" class="btn btn-success" style="float: right;">UPDATE</button>
+                </div>
+            </div>
         </div>
     </div>
